# API-Rust-Actix

./: .env  Cargo.toml  txt
migrations/2021-01-23-194127_myMigration/: up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs  trying  trying.rs
