[package]
name = "rust-blogpost-auth-async"
version = "0.1.0"
authors = ["hussainhyder23 <hussainhyder23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3"
actix-web-httpauth = "0.5.0"
diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv ="0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde ={ version = "1.0.120", features = ["derive"] }

serde_json = "1.0.61"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.7.1"
derive_more = "0.99.2"
futures = "0.3.1"
serde_derive = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
thiserror = "1.0.23"